Fix off-center SVGs
I don't know what commit broke this, but I think this seems like a
mostly reasonable way to get it right.

--- a/scifiweb/static/scss/_modifiers.scss
+++ b/scifiweb/static/scss/_modifiers.scss
@@ -32,3 +32,11 @@
         float: right !important;
     }
 }
+
+.image.is-centered {
+    > svg,
+    > img {
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+}
